[package]
name = "test_os"
version = "0.1.0"
authors = ["Corrina Sivak <csivak345@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.11"
rlibc = "1.0.0"
rand = {version = "0.7.3", default-features = false}
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.7.0"
pic8259_simple = "0.2.0"
x86_64 = "0.12.3"

[dev-dependencies]
bootimage = "0.10.1"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
